--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                     <li>
                         <button class="library-btn" data-library="plotly">
                             <i class="fas fa-chart-pie"></i>
-                            <span>Plotly</span>
+                            <span>Numpy</span>
                         </button>
                     </li>
                 </ul>
